data explorator, some improvements
